2014-09-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amanda-rest-server.pl: Add '--max-requests 1' to starman
	  arguments.

2014-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c (amgtar_restore): Exit on error if tar fail.
	* perl/Amanda/Changer/diskflat.pm: fix.
	* perl/Amanda/FetchDump.pm: New perl module to fetch a dump.
	* perl/Amanda/Message.pm (full_message): New function.
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add
	  post /amanda/v1.0/configs/:CONF/runs/fetchdump
	* perl/Amanda/Rest/Runs.pm (fetchdump): New function.
	* perl/Makefile.am: Add Amanda/FetchDump.pm
	* server-src/amfetchdump.pl: Use new perl Amanda::Fetchdump module.
	* server-src/amidxtaped.pl: Use new perl Amanda::Fetchdump module.
	* installcheck/amfetchdump.pl: Fix for module use.

2014-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Storages_Labels.pl: Fix.

2014-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/diskflat-device.c: Unlink file on erase.
	* perl/Amanda/Changer.pm: Add message 1100066
	* perl/Amanda/Changer/diskflat.pm: Do not create files if slot not
	  used.
	* perl/Amanda/Label.pm: Fix.
	* installcheck/Amanda_Rest_Storages.pl: Fix.
	* installcheck/Amanda_Rest_Storages_Labels.pl: Fix.

2014-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/traditional.pm: Continue on invalid.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (verify): Failure to read the label is not an
	  error.
	* perl/Amanda/Changer.pm: Add message for code 1100065.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Compute and print crc32 of each packet if
	  debug_auth >= 6.

2014-09-10  Xu Han <xhan@carbonite.com>
	* packaging/rpm/amanda.spec.src: CentOS 7 packaging.

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for rhel7.
